Small fix to tech logo spacing

--- a/sass/_large.scss
+++ b/sass/_large.scss
@@ -49,7 +49,7 @@ hr.menu-spacer {
   }
   .logos {
     .logo {
-      padding: 50px;
+      padding: 70px;
     }
   }
 }
